prototypes/gitpod/ytt/ingressroute.yaml
#@ load("@ytt:data", "data")
#@ domain = "s1.python." + data.values.shared.domain
#@ domainWeb = "s1.python-web." + data.values.shared.domain
#@ redirect = "https://" + domainWeb + "/?folder=/home/workspace/projects"
#@ traefikLB = "lb." + data.values.shared.domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitpod-1
  annotations:
    external-dns.alpha.kubernetes.io/target: #@ traefikLB
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: #@ "Host(`{}`)".format(domainWeb)
    priority: 10
    services:
      - name: gitpod-1
        port: 3000
        scheme: http
    middlewares:
    - name: gitpod-1
  - kind: Rule
    match: #@ "Host(`{}`)".format(domain)
    priority: 10
    services:
      - name: gitpod-1
        port: 3000
        scheme: http
    middlewares:
    - name: set-project
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: set-project
spec:
  redirectRegex:
    regex: ".*"
    replacement: #@ redirect
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitpod-1
spec:
  basicAuth:
    secret: gitpod-1
